Add Nuxt: Create App command

--- a/assets/locales/pt-BR.json
+++ b/assets/locales/pt-BR.json
@@ -6,6 +6,11 @@
 	"statusBarButtons.setPortNumber.tooltip": "Clique para selecionar a Porta em que o aplicativo irá executar",
     "inputBoxes.setPortNumber.prompt" :"Escolha a Porta padrão em que o aplicativo irá executar",
     "inputBoxes.setPortNumber.placeHolder" : "Digite um número de Porta válido",
+    "inputBoxes.createApp.prompt": "Digite um nome para o seu aplicativo",
+	"inputBoxes.createApp.placeHolder": "Use caracteres para formar uma url válida, como por exemplo: nome_do_app, nome-do-app, nomeDoApp",
     "errors.portNumberIsNotValid" : "A Porta não é válida",
-    "errors.portNumberIsNotAvailable" : "A Porta não está disponível"
+    "errors.portNumberIsNotAvailable" : "A Porta não está disponível",
+    "errors.appNameIsNotValid" : "O nome do aplicativo não é válido",
+    "openDialogs.createApp.selectDirectory.openLabel": "Criar Aplicativo Nuxt",
+	"openDialogs.createApp.selectDirectory.title": "Seleção de Pasta para o aplicativo Nuxt"
 }
