fix portuguese translation and translate the nuxt is ready message

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -12,5 +12,6 @@
 	"errors.portNumberIsNotAvailable": "Port Number is not Available",
 	"errors.appNameIsNotValid": "App Name is not Valid",
 	"openDialogs.createApp.selectDirectory.openLabel": "Create Nuxt App",
-	"openDialogs.createApp.selectDirectory.title": "Nuxt App Directory Selection"
+	"openDialogs.createApp.selectDirectory.title": "Nuxt App Directory Selection",
+	"informationMessages.nuxtExtensionIsReady" : "Nuxt extension is Ready"
 }
