--- a/assets/locales/pt-BR.json
+++ b/assets/locales/pt-BR.json
@@ -12,5 +12,6 @@
     "errors.portNumberIsNotAvailable" : "A Porta não está disponível",
     "errors.appNameIsNotValid" : "O nome do aplicativo não é válido",
     "openDialogs.createApp.selectDirectory.openLabel": "Criar Aplicativo Nuxt",
-	"openDialogs.createApp.selectDirectory.title": "Seleção de Pasta para o aplicativo Nuxt"
+	"openDialogs.createApp.selectDirectory.title": "Seleção de Pasta para o aplicativo Nuxt",
+	"informationMessages.nuxtExtensionIsReady" : "A extensão Nuxt está pronta para uso"
 }
